--- a/app/src/main/res/layout/my_spinner.xml
+++ b/app/src/main/res/layout/my_spinner.xml
@@ -2,10 +2,8 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/my_spinner"
+    android:id="@+id/text1"
     android:maxLines="1"
-    android:textSize="14sp"
-    android:textColor="@color/colorPrimary"
-    style="@style/spinnerStyle">
+    style="@style/MySpinnerLook">
 
 </TextView>
