--- a/app/src/main/res/values/my_spinner.xml
+++ b/app/src/main/res/values/my_spinner.xml
@@ -2,6 +2,7 @@
 <resources>
     <style name="MySpinnerLook"
         parent="@android:style/Widget.TextView.SpinnerItem">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#34463F</item>
     </style>
 </resources>
